@@ -5,6 +5,7 @@
 	an invalid escape sequence, and when entering a verbatim keystroke.
 	Leave the cursor off during Unicode input, for extra feedback.
 	* src/browser.c (do_browser): Improve the wording of a message.
+	* src/chars.c (is_valid_unicode): Speed up Unicode validation.
 
 2016-03-28  Benno Schulenberg  <bensberg@justemail.net>
 	* src/winio.c (statusbar): Don't bother putting back the cursor in
